# code-jam-11

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  trivia.db
.github/workflows/: docker.yml  main.yml  unit-tests.yml  validation.yml
alembic-migrations/: README.md  env.py
alembic-migrations/versions/: 2024_07_21_1854-c55da3c62644_initial_migration.py  2024_07_25_1814-8fc4b07d9adc_add_basic_models.py  2024_07_26_1755-526fbc726d80_fix_id_is_not_unique.py  2024_07_27_1712-eeef1b453205_initial_migration.py
app/: bot.py  main.py  settings.py  word_generator.py
app/models/: guess.py
app/storage/: guess.py
ardent-andromedas/: pyproject.toml
ardent-andromedas/assets/clouds/: License.txt
ardent-andromedas/src/: app.py
ardent-andromedas/src/bot/: bot.py  discord_event.py  test_bot.py
ardent-andromedas/src/data_gen/: generator.py
ardent-andromedas/src/ecosystem/: __init__.py  cloud_manager.py  ecosystem.py  frog.py  plant.py  reaction_emoji.py  shared_numpy_array.py  snake.py  speech_bubble.py  wordclouds.py
ardent-andromedas/src/storage/: __init__.py  models.py
contemplative-constellations/: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.local.yaml  docker-compose.yaml
contemplative-constellations/.github/scripts/: normalize_coverage.py
contemplative-constellations/.github/workflows/: docker.yml  pages.yml
contemplative-constellations/alembic-migrations/: env.py  script.py.mako
contemplative-constellations/presentation/: presentation.md
contemplative-constellations/src/: __main__.py  bot.py
contemplative-constellations/src/converters/: bot_extension.py
contemplative-constellations/src/db_adapters/: __init__.py  media.py
contemplative-constellations/src/db_tables/: README.md
contemplative-constellations/src/exts/error_handler/: __init__.py  error_handler.py  view.py
contemplative-constellations/src/exts/sudo/: __init__.py
contemplative-constellations/src/exts/tvdb_info/: __init__.py  main.py
contemplative-constellations/src/exts/tvdb_info/ui/: movie_series_view.py
contemplative-constellations/src/tvdb/: __init__.py  generated_models.py
contemplative-constellations/src/utils/: log.py  ratelimit.py  tvdb.py
ornate-orbits/: docker-compose.yml  pyproject.toml  setup.cfg
ornate-orbits/app/: bot.py  entrypoint.sh  enums.py  gather_trivias.py
ornate-orbits/app/core/: ui.py  wordle.py
ornate-orbits/app/models/: base.py  player.py  trivia.py  wordle.py
ornate-orbits/app/storage/: database.py  player.py  trivia.py  wordle.py
ornate-orbits/config/app/: .env.example
presentation/: presentation.md
src/: __main__.py  app.py  bot.py  scripts.py  settings.py
src/bot/: __init__.py  bot.py  discord_event.py  models.py  settings.py  test_bot.py
src/data_gen/: __init__.py  generator.py
src/db_adapters/: __init__.py  lists.py  media.py  user.py
src/db_tables/: README.md  media.py  user.py  user_list.py
src/ecosystem/: __init__.py  bird.py  critter.py  ecosystem.py  frog.py  plant.py  shared_numpy_array.py  snake.py  speech_bubble.py  wordclouds.py
src/exts/error_handler/: error_handler.py  utils.py
src/exts/help/: __init__.py  help.py
src/exts/ping/: ping.py
src/exts/sudo/: sudo.py
src/exts/tvdb_info/: main.py  ui.py
src/exts/tvdb_info/ui/: __init__.py  _media_view.py  _reactive_buttons.py  episode_view.py  movie_series_view.py  profile_view.py  search_view.py
src/storage/: __init__.py  models.py
src/tvdb/: __init__.py  client.py  errors.py  generated_models.py  models.py  swagger.yml
src/utils/: __init__.py  cat_api.py  config.py  database.py  iterators.py  log.py  markdown.py  mention_command.py  ratelimit.py
tests/: test_wordle_game.py
tools/: generate_tvdb_models.py
