[tool.poetry]
name = "python-code-jam-2024"
version = "0.1.0"
description = ""
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"
pygame = "2.6.0"
pillow = "10.4.0"
setuptools = "^71.0.4"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
numpy = "^2.0.0"

[tool.poetry.dev-dependencies]
ruff = "0.5.4"
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py312"
fix = true
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D101",
    "D103",
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Annotations.
    "ANN001",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    # Random
    "S311",
    # Docstrings
    "D102",
    # Magic values
    "PLR2004",
    "FBT002",
    "FBT003",
    # Unused argument
    "ARG002",
    # Complexity
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    # Ambiguous formatting rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]
